@@ -29,6 +29,8 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
+
 /**
  * This class allows to send announce messages to Twitter.
  */
@@ -53,17 +55,17 @@ public class Twitter implements Announcer {
             connection.setDoOutput(true);
             connection.setUseCaches(false);
 
-            String credentials = Base64.encodeBase64String((username + ":" + password).getBytes("UTF-8")).trim();
+            String credentials = Base64.encodeBase64String((username + ":" + password).getBytes(UTF_8)).trim();
             connection.setRequestProperty("Authorization", "Basic " + credentials);
-            final OutputStream outputStream = connection.getOutputStream();
-            IOUtils.write("status=" + URLEncoder.encode(message, "UTF-8"), outputStream);
-            IOUtils.closeQuietly(outputStream);
+            try (OutputStream outputStream = connection.getOutputStream()) {
+                IOUtils.write("status=" + URLEncoder.encode(message, UTF_8.name()), outputStream, UTF_8);
+            }
 
             logger.info("Successfully tweeted \'" + message + "\' using account \'" + username + "\'");
             if (logger.isDebugEnabled()) {
-                final InputStream inputStream = connection.getInputStream();
-                logger.debug(IOUtils.toString(inputStream, "UTF-8"));
-                IOUtils.closeQuietly(inputStream);
+                try (InputStream inputStream = connection.getInputStream()) {
+                    logger.debug(IOUtils.toString(inputStream, UTF_8));
+                }
             }
         } catch (Exception e) {
             throw UncheckedException.throwAsUncheckedException(e);
